# nailbite

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.rocm  LICENSE  PLAN.md  README.md  TROUBLESHOOTING.md  build.sh  config.yaml  index.html  issues.md  package.json  pnpm-lock.yaml  rust-toolchain.toml  shell.nix  vite.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: GPU_RUNBOOK.md  architecture.md  configuration.md  data-format.md  detection.md  development.md  exercises.md  gpu-acceleration.md
scripts/: analyze_flickering.py  bump-version.sh  repack-appimage.sh  run-appimage.sh
src/: App.tsx  app.rs  config.rs  errors.rs  index.css  lib.rs  main.rs  main.tsx  paths.rs
src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  errors.rs  frame.rs  lib.rs  main.rs  paths.rs  pipeline.rs  state.rs  tray.rs
src-tauri/src/actions/: mod.rs  sound.rs  types.rs  webhook.rs
src-tauri/src/camera/: controls.rs  mod.rs  v4l2.rs
src-tauri/src/commands/: camera.rs  config.rs  detection.rs  exercises.rs  history.rs  labels.rs  mod.rs  stats.rs
src-tauri/src/detection/: analyzer.rs  fusion.rs  hand_tracker.rs  mod.rs  tracker.rs  types.rs
src-tauri/src/detection/behaviors/: mod.rs  nail_biting.rs  nail_picking.rs
src-tauri/src/exercises/: finger_flick.rs  fingertip_massage.rs  fist_clench.rs  mod.rs  palm_press.rs
src-tauri/src/inference/: execution_provider.rs  face_detection.rs  face_mesh.rs  hand_landmark.rs  hand_landmark_rtmpose.rs  mod.rs  model_downloader.rs  palm_detection.rs  pose_detection.rs  pose_landmark.rs  postprocessing.rs  preprocessing.rs  session.rs
src-tauri/src/stats/: annotate.rs  event_history.rs  mod.rs  session_log.rs
src-tauri/src/training/: annotation.rs  collector.rs  mod.rs
src/actions/: mod.rs  notification.rs  popup.rs  sound.rs  webhook.rs
src/camera/: backend.rs  frame.rs  mod.rs  pipeline.rs  v4l_backend.rs
src/components/: AlertModal.tsx  DailyDetectionBars.tsx  LandmarkCanvas.tsx  Layout.tsx  ResizeEdges.tsx  SignalTimeline.tsx  SignalsPanel.tsx  StatusIndicator.test.tsx  StatusIndicator.tsx  ThemeProvider.tsx  TitleBar.tsx
src/components/ui/: calendar.tsx
src/detection/: fusion.rs  mod.rs  tracker.rs  types.rs
src/detection/behaviors/: nail_picking.rs
src/exercises/: ear_touch.rs  flat_hand_press.rs  interlocked_squeeze.rs  mod.rs  registry.rs  types.rs  verification.rs
src/hooks/: useCamera.ts  useConfig.test.ts  useConfig.test.tsx  useConfig.ts  useConfig.tsx  useDetection.tsx  useExercise.test.ts  useExercise.ts
src/hotkeys/: listener.rs
src/inference/: face_detection.rs  face_mesh.rs  hand_landmark.rs  mod.rs  model_downloader.rs  palm_detection.rs  postprocessing.rs  preprocessing.rs  session.rs
src/pages/: EventHistoryPage.tsx  ExercisePage.tsx  InsightsPage.tsx  PreviewPage.tsx  SettingsPage.tsx  StatsPage.tsx
src/stats/: mod.rs  session_log.rs
src/test/: setup.ts
src/training/: collector.rs  mod.rs
src/types/: index.ts
src/ui/: exercise_window.rs  mod.rs  preview.rs  tray.rs
