[package]
name = "nailbite"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "nailbite"
path = "src/main.rs"

[lib]
name = "nailbite"
path = "src/lib.rs"

[profile.release]
debug = false
debug-assertions = false
lto = true
rpath = false
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dependencies]
# ONNX inference
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"] }
ndarray = "0.17.2"

# Camera access (Linux V4L2)
v4l = "0.14.0"

# System tray
tray-icon = "0.21.3"

# GUI framework
eframe = "0.33.3"
egui = "0.33.3"

# Audio playback
rodio = "0.21.1"

# Desktop notifications
notify-rust = "4.12.0"

# HTTP client (for webhook action)
reqwest = { version = "0.13.1", features = ["blocking", "json", "rustls"], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"

# Error handling
thiserror = "2.0.18"

# Logging/tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Image processing
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }

# Cryptographic hashing for model integrity verification
sha2 = "0.10.9"

# Channels for thread communication
crossbeam-channel = "0.5.15"

# CLI argument parsing
clap = { version = "4.5.56", features = ["derive"] }

# GTK (required for tray-icon initialization on Linux)
gtk = "0.18.2"
cairo-rs = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
glib = "0.18"

# Global hotkeys
global-hotkey = "0.7.0"

# Random selection for exercises
rand = "0.9.2"

# Time utilities
chrono = { version = "0.4.43", features = ["serde"] }

[dev-dependencies]
tempfile = "3.17.1"
