[package]
name = "nailbite-tauri"
version = "0.2.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"
repository = "https://github.com/firstdorsal/nailbite"
description = "A quiet local companion that gently notices when your hands wander to your face — BFRB awareness, on-device."

[lib]
name = "nailbite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []

# GPU execution providers (compile-time feature gates)
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
migraphx = ["ort/migraphx"]
rocm = ["ort/rocm"]

# Convenience feature for all NVIDIA backends
nvidia-gpu = ["cuda", "tensorrt"]

# Convenience feature for all AMD backends
amd-gpu = ["migraphx", "rocm"]

# All GPU backends
gpu-all = ["nvidia-gpu", "amd-gpu"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3"

# ONNX inference
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"] }
ndarray = "0.17.2"

# Audio playback
rodio = "0.21.1"

# HTTP client (for webhook action)
reqwest = { version = "0.13.1", features = ["blocking", "json", "rustls"], default-features = false }

# URL parsing (for webhook SSRF protection)
url = "2.5"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"

# Error handling
thiserror = "2.0.18"

# Logging/tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Image processing
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }

# Cryptographic hashing for model integrity verification
sha2 = "0.10.9"

# Time utilities
chrono = { version = "0.4.43", features = ["serde"] }

# Base64 encoding for frame data
base64 = "0.22"

# Fast mutex for hot path
parking_lot = "0.12.3"
notify-rust = "4.17.0"
zip = { version = "8", default-features = false, features = ["deflate"] }

# WebKitGTK for Linux media permissions
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_16"] }
v4l = "0.14"

[profile.release]
debug = false
debug-assertions = false
lto = true
rpath = false
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_lossless = "deny"
indexing_slicing = "deny"

[dev-dependencies]
tempfile = "3.24.0"
